src/test/deca/syntax/valid/testIfElse1.deca
// test if else

{
 int i = 45;
 if ( i < 4){
   print("hi");
 } else if (i == 3){
  print("hello");
 } else{
 print("howdy");
 }
}
