src/test/deca/syntax/invalid/testExprIf.deca
// test the syntax of if then else
// Result : Error
// parenthèse obligatoire
{
if false {
  print("invalid");
}
